# StraightsGame

./: .gitignore  CMakeLists.txt  Card.cpp  Card.h  Command.cpp  Command.h  ComputerPlayer.cpp  ComputerPlayer.h  Controller.cpp  Controller.h  Deck.cpp  Deck.h  DeckGUI.cpp  DeckGUI.h  GameManager.cpp  GameManager.h  Hand.cpp  Hand.h  HumanPlayer.cpp  HumanPlayer.h  Makefile  MemCheck.cpp  MemCheck.h  Observer.h  Player.cpp  Player.h  PlayerID.cpp  PlayerID.h  PlayerStrategy.cpp  PlayerStrategy.h  README.md  Subject.cpp  Subject.h  TableGUI.cpp  TableGUI.h  straights.cpp
